--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  firebase_core: ^2.32.0
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
