--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.0
   firebase_core: ^2.32.0
   cloud_firestore: ^4.17.5
+  firebase_app_check: ^0.2.2+7
 
 dev_dependencies:
   flutter_test:
