--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_core: ^2.32.0
   cloud_firestore: ^4.17.5
   firebase_app_check: ^0.2.2+7
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
